--- a/css/cards.css
+++ b/css/cards.css
@@ -98,8 +98,149 @@ align-content: center;
     background-color: #fff;
 }
 
-.card-inquiry-table{
+.card-inquiry-container {
     position: absolute;
-    top: 250px;
+    display: flex;
+    flex-direction: row;
+    top: 180px;
     left: 260px;
+    width: 80%;
+    background-color: #fff;
+    justify-content: flex-start;
+}
+
+
+.card-inquiry-table-left,
+.card-inquiry-table-right {
+    display: flex;
+    flex-direction: column;
+    border: 1px solid #ddd;
+    font-family: Arial, sans-serif;
+    background-color: #fff;
+    height: 100px;
+
+}
+
+
+.card-inquiry-table-left .row,
+.card-inquiry-table-right .row {
+    display: flex;
+}
+
+
+.title-cell {
+    background-color: #f0f0f0;
+    font-weight: bold;
+    width: 180px;
+    padding: 8px;
+    text-wrap: nowrap;
+    border-right: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    box-sizing: border-box;
+}
+
+.content-cell {
+    background-color: #fff;
+    padding: 8px;
+    border-bottom: 1px solid #ddd;
+    flex: 1;
+    width: 400px;
+    height: 30px;
+    box-sizing: border-box;
+}
+
+
+.card-inquiry-table-left,
+.card-inquiry-table-right {
+    max-height: 400px;
+}
+
+.card-inquiry-tab{
+    position: absolute;
+    top: 570px;
+    left: 260px;
+    height: 100px;
+    color: #fff;
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    text-align: center;
+    justify-content: center;
+}
+
+.tab-item{
+    background-color: #1384bf;
+    width: 130px;
+    height: 35px;
+    cursor: pointer;
+    text-align: center;
+    line-height: 35px;
+}
+
+.tabact{
+    background-color: #043651;
+}
+
+.tab-content{
+    position: relative;
+    top: 600px;
+    left: 260px;
+    height: auto;
+    width: 80%;
+    color: black;
+    background-color: #dddddd;
+    border: 1px solid #8888;
+
+}
+
+.customers-table,
+.transactions-table {
+    width: 100%;
+    border-collapse: collapse;
+    font-family: Arial, sans-serif;
+    margin-top: 10px;
+    border-radius: 6px;
+    display: table;
+}
+
+.customers-table thead th,
+.transactions-table thead th {
+    background-color: #1384bf;
+    color: #ffffff;
+    padding: 12px 10px;
+    text-align: left;
+    margin-top: -20px;
+    font-size: 15px;
+    font-weight: bold;
+    border: 2px solid #878484;
+}
+
+.customers-table tbody,
+.transactions-table tbody {
+    display: table-row-group;
+}
+
+.customers-table tbody td,
+.transactions-table tbody td{
+    padding-top: -10px;
+
+    border-bottom: 1px solid #ddd;
+    background-color: #f9f9f9;
+    height: 30px;
+}
+
+.customers-table tbody tr:nth-child(even) td,
+.transactions-table tbody tr:nth-child(even) td  {
+    background-color: #ffffff;
+}
+
+.customers-table tbody tr:hover td,
+.transactions-table tbody tr:hover td{
+    background-color: #e6f0fa;
+    cursor: pointer;
+}
+
+.customers-table th,
+.customers-table td {
+    font-size: 14px;
 }
