--- a/css/cards.css
+++ b/css/cards.css
@@ -194,17 +194,20 @@ align-content: center;
 }
 
 .customers-table,
-.transactions-table {
+.transactions-table,
+.linked-accounts-table{
     width: 100%;
     border-collapse: collapse;
     font-family: Arial, sans-serif;
     margin-top: 10px;
+    border: 2px solid #878484;
     border-radius: 6px;
     display: table;
 }
 
 .customers-table thead th,
-.transactions-table thead th {
+.transactions-table thead th,
+.linked-accounts-table thead th{
     background-color: #1384bf;
     color: #ffffff;
     padding: 12px 10px;
@@ -216,12 +219,13 @@ align-content: center;
 }
 
 .customers-table tbody,
-.transactions-table tbody {
+.transactions-table tbody,
+.linked-accounts-table tbody{
     display: table-row-group;
 }
 
 .customers-table tbody td,
-.transactions-table tbody td{
+.transactions-table tbody td, .linked-accounts-table td{
     padding-top: -10px;
 
     border-bottom: 1px solid #ddd;
