--- a/css/cards.css
+++ b/css/cards.css
@@ -14,6 +14,7 @@
     top: 10px;
     left: 10px;
     display: flex;
+    width: 50%;
     flex-direction: column;
     border: 1px solid #888;
 }
@@ -21,7 +22,8 @@
 .right-details{
     position: absolute;
     top: 10px;
-    right: 90px;
+    right: -10px;
+    width: 50%;
     display: flex;
     flex-direction: column;
     border: 1px solid #888;
@@ -29,7 +31,7 @@
 
 .field{
     height: 20px;
-    width: 500px;
+    width: 100%;
     display: flex;
     flex-direction: row;
     gap: 30px;
@@ -40,16 +42,16 @@
 label{
     background-color: #ddd;
     padding: 5px;
-    width: 800px;
+    width: 100%;
     height: 50px;
     border: 1px solid #888;
 }
 
 input{
-    width: 800px;
+    width: 100%;
     height: 20px;
     border: 1px solid #beeaff;
-align-content: center;
+    align-content: center;
     justify-content: center;
 }
 
@@ -74,7 +76,7 @@ align-content: center;
     background-color: #fff;
 }
 #client-table thead {
-    background-color: lightblue;
+    background-color: #2c92ff;
 }
 #client-table th, #client-table td {
     padding: 10px 18px;
@@ -314,14 +316,14 @@ align-content: center;
     background: #f0f8ff;
 }
 
-/* Fade-in animation */
+
 @keyframes fadeIn {
     from { opacity: 0; transform: translateY(10px); }
     to { opacity: 1; transform: translateY(0); }
 }
 
 .auto-nav-row.highlight {
-    background-color: #ffecb3; /* soft yellow */
+    background-color: #ffecb3;
     font-weight: bold;
     transition: background-color 0.3s ease;
 }
