--- a/css/cards.css
+++ b/css/cards.css
@@ -68,15 +68,16 @@ input{
 }
 .client-details {
     position: relative;
-    top: 300px;
+    top: 280px;
     left: 260px;
-    width: 80%;
+    width: 85%;
     overflow: hidden;
-    height: 200px;
+    height: 100px;
     background-color: #fff;
 }
 #client-table thead {
-    background-color: #2c92ff;
+    background-color: #3ea2ff;
+    height: 15px !important;
 }
 #client-table th, #client-table td {
     padding: 10px 18px;
@@ -87,6 +88,7 @@ input{
     border-collapse: collapse;
     margin-top: 10px;
     width: 100%;
+    height: 20px;
     display: none;
 }
 
