--- a/css/cards.css
+++ b/css/cards.css
@@ -3,9 +3,9 @@
     top: 180px;
     left: 260px;
     border: 3px solid #8888;
-    width: 80%;
+    width: 82%;
     overflow: hidden;
-    height: 100px;
+    height: 110px;
     background-color: #fff;
 }
 
@@ -30,7 +30,7 @@
 }
 
 .field{
-    height: 20px;
+    height: 30px;
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -40,19 +40,19 @@
 }
 
 label{
-    background-color: #ddd;
+    background-color: #f3f0f0;
     padding: 5px;
     width: 100%;
-    height: 50px;
+    height: 30px;
     border: 1px solid #888;
 }
 
-input{
-    width: 100%;
-    height: 20px;
+input, .select{
+    width: 80%;
+    height: 30px;
     border: 1px solid #beeaff;
     align-content: center;
-    justify-content: center;
+    justify-content: left;
 }
 
 .buttons{
@@ -75,11 +75,17 @@ input{
     height: 100px;
     background-color: #fff;
 }
-#client-table thead {
-    background-color: #3ea2ff;
+#client-table thead th{
+    background-color: #1384bf;
+    color: #fff;
+    font-weight: normal;
+    text-align: center;
     height: 15px !important;
+    padding: 10px 18px;
+    border: 1px solid #ddd;
+
 }
-#client-table th, #client-table td {
+#client-table , #client-table td {
     padding: 10px 18px;
     border: 1px solid #ddd;
     text-align: left;
@@ -108,9 +114,12 @@ input{
     flex-direction: row;
     top: 180px;
     left: 260px;
-    width: 80%;
+    width: 50%;
     background-color: #fff;
     justify-content: flex-start;
+    border: 1px solid #ddd;
+    height: auto;
+    font-weight: normal;
 }
 
 
@@ -128,35 +137,36 @@ input{
 
 .card-inquiry-table-left .row,
 .card-inquiry-table-right .row {
+    width: 100%;
     display: flex;
 }
 
 
 .title-cell {
     background-color: #f0f0f0;
-    font-weight: bold;
-    width: 180px;
-    padding: 8px;
+    font-weight: normal;
+    width: 430px;
+    padding: 10px;
     text-wrap: nowrap;
-    border-right: 1px solid #ddd;
-    border-bottom: 1px solid #ddd;
+    border-right: 2px solid #ddd;
+    border-bottom: 2px solid #ddd;
     box-sizing: border-box;
 }
 
 .content-cell {
     background-color: #fff;
-    padding: 8px;
-    border-bottom: 1px solid #ddd;
+    padding: 10px;
+    border-bottom: 2px solid #ddd;
     flex: 1;
-    width: 400px;
-    height: 30px;
+    width: 430px;
+    height: 37px;
     box-sizing: border-box;
 }
 
 
 .card-inquiry-table-left,
 .card-inquiry-table-right {
-    max-height: 400px;
+    max-height: 100%;
 }
 
 .card-inquiry-tab{
@@ -231,7 +241,6 @@ input{
 .customers-table tbody td,
 .transactions-table tbody td, .linked-accounts-table td{
     padding-top: -10px;
-
     border-bottom: 1px solid #ddd;
     background-color: #f9f9f9;
     height: 30px;
@@ -341,4 +350,13 @@ input{
 }
 .auto-walk-btn:hover {
     background: #1976d2;
+}
+
+.subcateg{
+    background-color: white;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 100%;
 }
