Now we starting

--- a/css/cards.css
+++ b/css/cards.css
@@ -354,9 +354,17 @@ input, .select{
 
 .subcateg{
     background-color: white;
-    position: absolute;
     display: flex;
     flex-direction: column;
     gap: 10px;
+    width: 100%;
+}
+
+.more-subcateg{
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-top: 10px;
     width: 100%;
 }
