--- a/css/cards.css
+++ b/css/cards.css
@@ -9,6 +9,17 @@
     background-color: #fff;
 }
 
+.customer-detailss{
+    position: relative;
+    top: 180px;
+    left: 260px;
+    border: 3px solid #8888;
+    width: 82%;
+    overflow: hidden;
+    height: 400px;
+    background-color: #fff;
+}
+
 .left-details{
     position: absolute;
     top: 10px;
